Gallery initial structure

--- a/nexter/index.html
+++ b/nexter/index.html
@@ -289,7 +289,11 @@
         </section>
 
         <section class="gallery">
-            Gallery
+            <figure class="gallery__item gallery__item--1">
+                <img src="img/gal-1.jpeg" alt="Gallery image 1" class="gallery__img">
+            </figure>
+
+            <img src="img/gal-2.jpeg" alt="Gallery image 2" class="gallery__img">
         </section>
 
         <footer class="footer">
