Footer and Galery sections finished

--- a/nexter/index.html
+++ b/nexter/index.html
@@ -290,14 +290,75 @@
 
         <section class="gallery">
             <figure class="gallery__item gallery__item--1">
-                <img src="img/gal-1.jpeg" alt="Gallery image 1" class="gallery__img">
+                <img src="img/gal-1.jpeg" alt="Gallery Image 1" class="gallery__img">
             </figure>
 
-            <img src="img/gal-2.jpeg" alt="Gallery image 2" class="gallery__img">
+            <figure class="gallery__item gallery__item--2">
+                <img src="img/gal-2.jpeg" alt="Gallery Image 2" class="gallery__img">
+            </figure>
+
+            <figure class="gallery__item gallery__item--3">
+                <img src="img/gal-3.jpeg" alt="Gallery Image 3" class="gallery__img">
+            </figure>
+
+            <figure class="gallery__item gallery__item--4">
+                <img src="img/gal-4.jpeg" alt="Gallery Image 4" class="gallery__img">
+            </figure>
+
+            <figure class="gallery__item gallery__item--5">
+                <img src="img/gal-5.jpeg" alt="Gallery Image 5" class="gallery__img">
+            </figure>
+
+            <figure class="gallery__item gallery__item--6">
+                <img src="img/gal-6.jpeg" alt="Gallery Image 6" class="gallery__img">
+            </figure>
+
+            <figure class="gallery__item gallery__item--7">
+                <img src="img/gal-7.jpeg" alt="Gallery Image 7" class="gallery__img">
+            </figure>
+
+            <figure class="gallery__item gallery__item--8">
+                <img src="img/gal-8.jpeg" alt="Gallery Image 8" class="gallery__img">
+            </figure>
+
+            <figure class="gallery__item gallery__item--9">
+                <img src="img/gal-9.jpeg" alt="Gallery Image 9" class="gallery__img">
+            </figure>
+
+            <figure class="gallery__item gallery__item--10">
+                <img src="img/gal-10.jpeg" alt="Gallery Image 10" class="gallery__img">
+            </figure>
+
+            <figure class="gallery__item gallery__item--11">
+                <img src="img/gal-11.jpeg" alt="Gallery Image 11" class="gallery__img">
+            </figure>
+
+            <figure class="gallery__item gallery__item--12">
+                <img src="img/gal-12.jpeg" alt="Gallery Image 12" class="gallery__img">
+            </figure>
+
+            <figure class="gallery__item gallery__item--13">
+                <img src="img/gal-13.jpeg" alt="Gallery Image 13" class="gallery__img">
+            </figure>
+
+            <figure class="gallery__item gallery__item--14">
+                <img src="img/gal-14.jpeg" alt="Gallery Image 14" class="gallery__img">
+            </figure>
         </section>
 
         <footer class="footer">
-            Footer
+            <ul class="nav">
+                <li class="nav__item"><a href="#" class="nav__link">Find your dream home</a></li>
+                <li class="nav__item"><a href="#" class="nav__link">Request proposal</a></li>
+                <li class="nav__item"><a href="#" class="nav__link">Download home planner</a></li>
+                <li class="nav__item"><a href="#" class="nav__link">Contact us</a></li>
+                <li class="nav__item"><a href="#" class="nav__link">Submit your property</a></li>
+                <li class="nav__item"><a href="#" class="nav__link">Come work with us!</a></li>
+            </ul>
+            <p class="copyright">
+                &copy; Copyright 2020 by Gabriel Hahn Schaeffer. Please fell free to use this project for your own purposes. This
+                does NOT apply if you plan to produce your own course or tutorials based on this project.
+            </p>
         </footer>
     </body>
 </html>
