--- a/nexter/index.html
+++ b/nexter/index.html
@@ -17,7 +17,17 @@
         </div>
 
         <header class="header">
-            Header
+            <img src="img/logo.png" alt="Nexter logo" class="header__logo">
+            <h3 class="heading-3">Your own home:</h3>
+            <h1 class="heading-1">The ultimate personal freedom</h1>
+            <button class="btn header__btn">View our properties</button>
+            <div class="header__seenon-text">Seen on</div>
+            <div class="header__seenon-logos">
+                <img src="img/logo-bbc.png" alt="Logo BBC">
+                <img src="img/logo-forbes.png" alt="Logo forbes">
+                <img src="img/logo-techcrunch.png" alt="Logo techchunch">
+                <img src="img/logo-bi.png" alt="Logo bi">
+            </div>
         </header>
 
         <div class="realtors">
